# jenkins-test-build-project

./: CMakeLists.txt  README.md  main.cpp
hello_world/: CMakeLists.txt  Hello_World.cpp  Hello_World.h
hello_world_tests/: CMakeLists.txt
hello_world_tests/basic_tests/: CMakeLists.txt  example_test.cpp
